syntax = "proto3";
option go_package = "github.com/tutman96/fantassist.io/tracker/protos";
import "protos/scene.proto";

message Packet {
  string requestId = 1;
  oneof message {
    Request request = 10;
    Response response = 11;
  }
}

message Request {
  oneof message {
    // Respond with AckResponse
    HelloRequest helloRequest = 1;

    // Respond with AckResponse
    DisplaySceneRequest displaySceneRequest = 2;

    // Respond with GetAssetResponse
    GetAssetRequest getAssetRequest = 3;

    // Respond with GetTableConfigurationResponse
    GetTableConfigurationRequest getTableConfigurationRequest = 4;

    // Respond with GetCurrentSceneResponse
    GetCurrentSceneRequest getCurrentSceneRequest = 5;


    // ------- Tracker ------- //

    // Respond with TrackerGetStatusResponse
    TrackerGetStatusRequest trackerGetStatusRequest = 10;

    // Respond with AckResponse
    TrackerSetIdleRequest trackerSetIdleRequest = 11;

    // Respond with AckResponse
    TrackerStartCalibrationRequest trackerStartCalibrationRequest = 12;

    // Respond with TrackerGetCalibrationResponse
    TrackerGetCalibrationRequest trackerGetCalibrationRequest = 13;

    // Respond with AckResponse
    TrackerStartTrackingRequest trackerStartTrackingRequest = 14;

    // Respond with TrackerGetMarkerLocationResponse
    TrackerGetMarkerLocationRequest trackerGetMarkerLocationRequest = 15;

    // Don't respond
    TrackerUpdateMarkerLocationRequest trackerUpdateMarkerLocationRequest = 16;
  }
}

message Response {
  oneof message {
    AckResponse ackResponse = 1;
    GetAssetResponse getAssetResponse = 2;
    GetTableConfigurationResponse getTableConfigurationResponse = 3;
    GetCurrentSceneResponse getCurrentSceneResponse = 4;

    // ------- Tracker ------- //
    TrackerGetStatusResponse trackerGetStatusResponse = 10;
    TrackerGetCalibrationResponse trackerGetCalibrationResponse = 11;
    TrackerGetMarkerLocationResponse trackerGetMarkerLocationResponse = 12;
  }
}

message HelloRequest { }

message AckResponse {}

message DisplaySceneRequest {
  Scene scene = 1;
}

message GetAssetRequest {
  string id = 1;
}

message GetAssetResponse {
  string id = 1;
  bytes payload = 2;
  string mediaType = 3;
}

message GetTableConfigurationRequest {

}

message GetTableConfigurationResponse {
  Resolution resolution = 1;
  message Resolution {
    double width = 1;
    double height = 2;
  }

  double size = 2;

  bool playAudioOnTable = 3;
}

message GetCurrentSceneRequest {}

message GetCurrentSceneResponse {
  Scene scene = 1;
}

// ------- Tracker ------- //

message TrackerGetStatusRequest {

}

message TrackerVector2d {
  float x = 1;
  float y = 2;
}

message TrackerGetStatusResponse {
  string uuid = 1;
  string version = 2;

  TrackerState state = 5;
  enum TrackerState {
    IDLE = 0;
    CALIBRATING = 1;
    TRACKING = 2;
  }
}

message TrackerSetIdleRequest {}

message TrackerStartCalibrationRequest {
  repeated TrackerVector2d corners = 1;
}

message TrackerGetCalibrationRequest {}
message TrackerGetCalibrationResponse {
  repeated int32 foundCorners = 1;
  repeated TrackerVector2d cornerLocations = 2;
}

message TrackerStartTrackingRequest {
  float updateRateMs = 1;
}

message TrackerGetMarkerLocationRequest {}

message TrackerGetMarkerLocationResponse {
  map<int32, TrackerVector2d> markerLocations = 1;
}

message TrackerUpdateMarkerLocationRequest {
  map<int32, TrackerVector2d> markerLocations = 1;
}
